# fa-models

./: .flake8  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: testing.yml  testing_and_deployment.yml  testing_and_packaging.yml
famodels/: algorithm.py  blocked_ip.py  data_generator.py  direction.py  email_subscriber.py  generator.py  investor.py  investor_statement.py  order.py  order_type.py  person.py  processed_signal.py  qualified_signal.py  raw_signal.py  rejected_signal.py  schema_generator.py  side.py  signal.py  signal_provider.py  status_of_signal.py  strategy.py  subscriber.py  trade.py  trading_signal.py  virtual_order.py
famodels/exchange/: connection_event.py  exchange_connection_event.py
famodels/fund/: fund.py
famodels/generators/: data_generator.py  schema_generator.py
famodels/market/: public_trade.py
famodels/models/: algorithm.py  connection_event.py  exchange_key.py  fund.py  investor.py  investor_statement.py  order.py  person.py  processed_signal.py  processed_trading_signal.py  signal_provider.py  signal_supplier.py  state_of_investor.py  state_of_signal.py  state_of_trade.py  subscription.py  trade.py  trading_signal.py  virtual_order.py
famodels/models/db_independent/: investor_exchange_data.py
famodels/models/exchange/: exchange_connection_event.py
famodels/models/market/: public_trade.py
models/: order.py  order_type.py  side.py  signal.py  trade.py
src/: signal.py
tests/: __init__.py  avro_schema_expected.json  dockerfile  pulsar_test.py  simple_class_test.py  test_blocked_ip.py  test_data_generator.py  test_email_subscriber.py  test_generator.py  test_investor.py  test_processed_trading_signal.py  test_produce_schemas.py  test_raw_signal.py  test_rejected_signal.py  test_schema_generator.py  test_sqlmodel_default_value.py  test_subscriber.py
tests/data/: avro_order.json  avro_schema_expected.json  avro_simple_schema.json  avro_trading_signal.json  test.json  trading_signal_sample.json
