# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fa-models"
version = "1.0.1"
description = "These are a set of models often used for trading services."
readme = "README.md"
authors = [{ name = "Brayan Svan", email = "brayan@freyaalpha.com" }]
#license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
keywords = ["finance", "trading", "models"]
dependencies = [
    "sqlmodel"
    #,
    #'tomli; python_version < "3.11"',
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/svabra/fa-models/settings"