# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fa-models"
version = "1.0.15"
description = "The library describes the most common models used in trading systems."
readme = "README.md"
authors = [{ name = "Brayan Svan", email = "brayan@freyaalpha.com" }]
#license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
keywords = ["finance", "trading", "models"]
dependencies = [
    "sqlmodel",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/svabra/fa-models/settings"

#[project.scripts]
#realpython = "reader.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.bumpver]
current_version = "1.0.15"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
#"setup.py" = [
#    "version = '{version}'",
#]
#"README.md" = [
#    "{version}",
#    "{pep440_version}",
#]

